# JWebView

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: library.h  library.hpp
src/: library.cpp
src/cli/src/: main.rs
src/cli/src/helpers/: input.rs  mod.rs  sh.rs
src/java_src/: pom.xml
src/java_src/lib/: libJWebView.dylib
src/java_src/src/main/java/: Main.java
src/java_src/src/main/java/Jauri/: Webview.java
src/java_src/src/main/java/ai/cirkl/jauri/: JWebview.java
src/java_src/src/main/java/ai/cirkl/jauri/core/: Jauri.java
src/java_src/src/main/resources/: package-lock.json  package.json
src/java_src/src/main/resources/src/: app.html
src/java_src/src/main/resources/src/routes/: +page.svelte
src/landing/: README.md  package-lock.json  package.json
src/landing/src/components/: Welcome.astro
src/landing/src/layouts/: Layout.astro
